--- a/bricks/data-view/src/data-view-variables.shadow.css
+++ b/bricks/data-view/src/data-view-variables.shadow.css
@@ -25,8 +25,16 @@
   --palette-rgba-gray-9: rgba(0, 0, 0, 90%);
   --palette-rgba-gray-10: rgba(0, 0, 0, 100%);
 
+  --palette-rgba-blue-gray-2: rgba(101, 106, 134, 20%);
+  --palette-rgba-blue-gray-3: rgba(101, 106, 134, 30%);
+  --palette-rgba-blue-gray-8: rgba(101, 106, 134, 80%);
+
+  --palette-tech-blue-4-channel: 67, 127, 255;
+  --palette-tech-blue-4: rgb(var(--palette-tech-blue-4-channel));
   --palette-tech-blue-6-channel: 51, 102, 255;
   --palette-tech-blue-6: rgb(var(--palette-tech-blue-6-channel));
+  --palette-tech-blue-8-channel: 40, 69, 159;
+  --palette-tech-blue-8: rgb(var(--palette-tech-blue-8-channel));
 
   --palette-sea-green-4-channel: 131, 245, 225;
   --palette-sea-green-4: rgb(var(--palette-sea-green-4-channel));
@@ -47,15 +55,19 @@
   /* 背景色 */
   --color-fill-global-bg: #0f1014;
   --color-fill-bg-container-1: var(--palette-rgba-white-1);
-  --color-fill-bg-container-2: #1F222F;
-  --color-fill-bg-base-1: rgba(101, 106, 134, 20%);
+  --color-fill-bg-container-2: var(--palette-rgba-blue-gray-2);
+  --color-fill-bg-container-3: var(--palette-rgba-blue-gray-8);
+  --color-fill-bg-base-1: var(--palette-rgba-blue-gray-2);
   --color-fill-bg-base-2: rgba(15, 16, 20, 0%);
   --color-fill-bg-base-3: rgba(0, 0, 0, 20%);
   --color-fill-bg-base-4: rgba(40, 46, 58, 100%);
   --color-fill-bg-base-5: rgba(19, 25, 47, 80%);
+  --color-fill-bg-base-6: var(--palette-rgba-blue-gray-3);
 
   /* 主题色 */
   --color-brand: var(--palette-tech-blue-6);
+  --color-brand-hover: var(--palette-tech-blue-4);
+  --color-brand-active: var(--palette-tech-blue-8);
 
   /* 辅助色 */
   --color-contrast-1: var(--palette-sea-green-4);
@@ -68,8 +80,10 @@
   --color-header-text-big: var(--palette-rgba-white-10);
   --color-header-text: var(--palette-rgba-white-10);
   --color-normal-text: var(--palette-rgba-white-10);
+  --color-strong-text: var(--palette-rgba-white-9);
   --color-auxiliary-text: var(--palette-rgba-white-8);
   --color-secondary-text: var(--palette-rgba-white-6);
+  --color-disabled-text: var(--palette-rgba-white-4);
 
   /* 边框色 */
   --color-border-divider-line: var(--palette-rgba-white-1);
