chore(): add i18n & example.yaml

--- a/bricks/data-view/src/tabs-drawer/tabs-drawer.shadow.css
+++ b/bricks/data-view/src/tabs-drawer/tabs-drawer.shadow.css
@@ -93,39 +93,38 @@
     position: absolute;
     right: 55px;
     top: 7px;
-    height: 32px;
-    line-height: 32px;
-    border-radius: 4px;
-    background: rgba(0,0,0,0.7);
-    backdrop-filter: blur(5px);
-    padding: 0 12px;
+    line-height: 20px;
+    padding: 8px 15px 8px 8px;
+    font-size: var(--chart-tooltips-font-size-2);
+    color: var(--color-normal-text);
     width: auto;
     white-space: nowrap;
+    --treemap-tooltip-background: rgba(103, 149, 219, 0.12) radial-gradient(100% 100% ellipse at 12px 4px, rgba(var(--palette-tech-blue-6-channel), 0.3), rgba(var(--palette-tech-blue-6-channel), 0));
+    --treemap-backdrop-filter: blur(5px);
+    z-index: 0;
 }
-.menuIconTooltip:before {
+.menuIconTooltip:before,
+.menuIconTooltip:after {
     content: "";
     clear: both;
     position: absolute;
-    width: 100%;
-    height: 100%;
     display: block;
+    left: 0;
     right: 0;
-    border-radius: 4px;
-    background: rgba(103,149,219,0.12) linear-gradient(183deg, rgba(32,95,255,0.3) 0%, rgba(32,95,255,0) 100%);
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+    background: var(--treemap-tooltip-background);
+    backdrop-filter: var(--treemap-backdrop-filter);
 }
-.menuIconTooltip:after{
-    content: "";
-    clear: both;
-    position: absolute;
-    top: calc(50% - 5px);
-    right: -8px;
-    display: block;
-    width: 0;
-    height: 0;
-    border-width: 4px;
-    border-style: solid;
-    border-color: transparent transparent transparent rgba(32, 95, 255, 0.25);
+.menuIconTooltip::before {
+    clip-path: inset(0 7px 0 0 round var(--medius-border-radius));
 }
+
+.menuIconTooltip::after {
+    clip-path: polygon(calc(100% - 7px) calc(50% - 7px), 100% 50%, calc(100% - 7px) calc(50% + 7px));
+}
+
 .content {
     flex: 1;
 }
