--- a/bricks/data-view/src/complex-search/complex-search.shadow.css
+++ b/bricks/data-view/src/complex-search/complex-search.shadow.css
@@ -86,6 +86,7 @@ input:not(:disabled):focus {
     height: 32px;
     line-height: 20px;
     box-sizing: border-box;
+    cursor: pointer;
 }
 .menuTitle {
     white-space: nowrap;
