--- a/bricks/data-view/src/dropdown-menu/dropdown-menu.shadow.css
+++ b/bricks/data-view/src/dropdown-menu/dropdown-menu.shadow.css
@@ -34,8 +34,9 @@
   opacity: 1;
 }
 
-.select-focused .select-selector-item {
-  color: var(--color-secondary-text);
+.select-focused .select-selector-item,
+.select-focused .select-selection-placeholder {
+  color: var(--color-disabled-text);
 }
 
 .select-selector {
@@ -93,8 +94,8 @@
 }
 
 .select-selection-placeholder {
-  color: var(--color-secondary-text);
-  transition: none;
+  color: var(--color-normal-text);
+  transition: color .3s;
   pointer-events: none;
 }
 
@@ -113,7 +114,6 @@
   top: 50%;
   inset-inline-start: auto;
   inset-inline-end: 11px;
-  color: var(--color-normal-text);
   text-align: center;
   font-size: 12px;
   line-height: 1;
@@ -134,15 +134,20 @@
   cursor: pointer;
 }
 
-.select-clear:hover {
-  color: var(--color-secondary-text);
-}
-
 .ant-select-suffix {
   display: inline-block;
   width: 100%;
   height: 100%;
   line-height: 1;
+}
+
+.search-icon {
+  color: var(--color-disabled-text);
+}
+
+.down-icon,
+.clear-icon {
+  color: var(--color-auxiliary-text);
 }
 
 /* ============== select End ============== */
