chore(): modify style

--- a/bricks/data-view/src/data-view-variables.shadow.css
+++ b/bricks/data-view/src/data-view-variables.shadow.css
@@ -116,6 +116,7 @@
 
   /* 标题 */
   --title-font-size-larger: 30px;
+  --title-font-size-strong: 22px;
   --title-font-size: 18px;
   --normal-font-size: 14px;
   --auxiliary-font-size: 16px;
