--- a/bricks/data-view/src/app-wall/system-card/system-card.shadow.css
+++ b/bricks/data-view/src/app-wall/system-card/system-card.shadow.css
@@ -4,9 +4,10 @@
    padding: 30px 24px 35px;
    margin-right: 20px;
    position: relative;
+   border-radius: var(--no-border-radius);
 }
 .infoWrapper {
-   background: #292F39;
+   background: var(--color-fill-bg-base-4);
    box-shadow: 0 0 12px 2px rgba(80,255,255,0.45), inset 0 0 22px 0 #20242A;
    border: 2px solid #50FFFF;
 }
@@ -15,19 +16,25 @@
    box-shadow: 0 0 12px 2px rgba(204,0,102,0.4), inset 0 4px 10px 0 rgba(255,255,255,0.65);
 }
 .cardName {
-   font-size: 22px;
+   font-size: var(--title-font-size-strong);
    line-height: 22px;
    text-align: center;
-   font-weight: 500;
+   font-weight: var(--font-weight-500);
    color: var(--color-normal-text);
    text-shadow: 0 1px 4px rgba(51,102,255,0.5);
    margin-bottom: 35px;
 }
 .descriptions {
     max-height: calc(100% - 70px);
-    color: var(--color-normal-text);
     font-size: var(--auxiliary-font-size-small);
     overflow: auto;
+   font-weight: var(--font-weight-400);
+}
+.descriptionsItem .itemKey {
+   color: var(--color-secondary-text);
+}
+.descriptionsItem .itemValue {
+   color: var(--color-strong-text);
 }
 .descriptionsItem {
    display: flex;
@@ -43,9 +50,10 @@
    position: absolute;
    bottom: 16px;
    right: 24px;
-   font-size: 16px;
+   font-size: var(--auxiliary-font-size);
    color: #99CCFF;
    cursor: pointer;
+   font-weight: var(--font-weight-500);
 }
 .buttonName {
    margin-left: 5px;
