--- a/bricks/data-view/src/app-wall/app-wall.shadow.css
+++ b/bricks/data-view/src/app-wall/app-wall.shadow.css
@@ -57,17 +57,9 @@
 
 
 .circle {
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
   background-color: red;
-  border-radius: 50%;
-}
-
-.circle2 {
-  width: 10px;
-  height: 10px;
-  background-color: blue;
-  border-radius: 50%;
 }
 
 .test {
@@ -79,4 +71,10 @@
 .line {
   width: 10px;
   height: 1000px;
+}
+
+.circle {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
 }
