--- a/bricks/data-view/src/app-wall/relation-line/relation-line.shadow.css
+++ b/bricks/data-view/src/app-wall/relation-line/relation-line.shadow.css
@@ -16,7 +16,7 @@
 
 .relation-line {
   position: relative;
-  width: var(--border-width-double-base);
+  width: 6px;
   height: 100%;
   background: var(--color-text-divider-line-1);
   overflow: hidden;
