--- a/bricks/data-view/src/app-wall/app-wall.shadow.css
+++ b/bricks/data-view/src/app-wall/app-wall.shadow.css
@@ -26,7 +26,9 @@
   right: 0;
   z-index: 100;
   display: none;
-  background: rgba(0, 0, 0, 0.2);
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.4);
 }
 
 .mask.transparent {
@@ -34,7 +36,7 @@
 }
 
 .mask.show {
-  display: block;
+  display: flex;
 }
 
 .card-item {
