--- a/bricks/data-view/src/app-wall/app-wall.shadow.css
+++ b/bricks/data-view/src/app-wall/app-wall.shadow.css
@@ -34,7 +34,7 @@
   justify-content: center;
 }
 
-.mask.hidden {
+.mask[hidden] {
   display: none;
 }
 
@@ -50,6 +50,7 @@
 .relation-line {
   pointer-events: none !important;
 }
+
 .closeBtn {
   visibility: hidden;
   position: fixed;
@@ -63,9 +64,10 @@
   font-size: 20px;
   line-height: 46px;
   cursor: pointer;
-  background: rgba(138,189,255,0.13);
+  background: rgba(138, 189, 255, 0.13);
   border-image: linear-gradient(135deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.33)) 1 1;
 }
+
 .closeBtn:hover {
   color: var(--color-normal-text);
 }
