--- a/bricks/data-view/src/app-wall/app-wall.shadow.css
+++ b/bricks/data-view/src/app-wall/app-wall.shadow.css
@@ -121,3 +121,54 @@
   width: 10px;
   height: 1000px;
 }
+.visibilityAnimate {
+  visibility: hidden;
+  animation: visibility 0.5s both 1s;
+}
+.trapezoidalLeftOrRightAnimation , .trapezoidalTopOrBottomAnimation{
+  background: linear-gradient(180deg, rgba(51,102,255,0.4) 0%, #99CCFF 100%);
+  opacity: 0.2;
+  position: absolute;
+}
+.trapezoidalTopOrBottomAnimation {
+  bottom: 0;
+  width: 100%;
+  left: 0;
+  animation: animateTop 1s both;
+}
+.trapezoidalLeftOrRightAnimation  {
+  top: 0;
+  right: 0;
+  height: 100%;
+  animation: animateLeft 1s both;
+}
+@keyframes animateTop {
+  0% {
+    height: 0;
+
+  }
+  100% {
+    height: 100%;
+  }
+
+}
+@keyframes animateLeft {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+
+}
+@keyframes visibility {
+  0% {
+    visibility: hidden;
+  }
+  100% {
+    visibility: visible;
+  }
+
+}
+
+
