chore(): update style
Refs: DASHBOARD-291

--- a/bricks/data-view/src/cabinet/cabinet-app-layer/cabinet-app-layer.shadow.css
+++ b/bricks/data-view/src/cabinet/cabinet-app-layer/cabinet-app-layer.shadow.css
@@ -22,7 +22,7 @@
 }
 
 .app-title {
-  font-size: 32px;
+  font-size: var(--title-font-size-larger);
   font-weight: var(--font-weight-500);
   color: var(--palette-rgba-white-10);
   line-height: 45px;
