--- a/bricks/data-view/src/cabinet/cabinet-container/cabinet-container.shadow.css
+++ b/bricks/data-view/src/cabinet/cabinet-container/cabinet-container.shadow.css
@@ -50,6 +50,7 @@
 {
     border-image: radial-gradient(circle, rgba(55, 229, 252, 1), #45E4FF) 3 3;
 }
+
 .k8sWrapper:after,
 .k8sWrapper:before {
     border-image: radial-gradient(circle, rgba(255, 102, 51, 1), #FF663380) 3 3;
@@ -65,6 +66,13 @@
 {
     border-image: radial-gradient(circle, rgba(55, 229, 252, 1), #45E4FF) 3 3;
     box-shadow: inset 0 0 30px 0 #45E4FF, inset 0 0 20px 0 #45E4FF;
+}
+.hostWrapper.wrapper-faded:after,
+.hostWrapper.wrapper-faded:before,
+.k8sWrapper.wrapper-faded:after,
+.k8sWrapper.wrapper-faded:before
+{
+    opacity: 0.1;
 }
 
 .k8sContainer {
@@ -111,6 +119,14 @@
     font-weight: var(--font-weight-400);
     color: var(--color-normal-text);
     position: relative;
+    display: flex;
+}
+.footerTitle {
+    flex: 1;
+    width: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .footer:after {
     content: "";
