--- a/bricks/data-view/src/app-wall/app-wall.shadow.css
+++ b/bricks/data-view/src/app-wall/app-wall.shadow.css
@@ -13,17 +13,28 @@
 *::after {
   box-sizing: border-box;
 }
+.mask-container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0c1216;
+  z-index: 1000;
+}
 
-.container {
+.appwall {
   position: relative;
 }
 
-.container.loading .card-item {
+.appwall.loading .card-item {
   pointer-events: none !important;
 }
 
 .mask {
   position: absolute;
+  width: 100%;
+  height: 100%;
   top: 0;
   bottom: 0;
   left: 0;
@@ -37,16 +48,20 @@
 .mask[hidden] {
   display: none;
 }
-
-.card-item-wrap {
-  opacity: 1;
-  transition: opacity 0.5s ease, width 0.3s, height 0.3s;
+.infoWrapper {
+  position: absolute;
+  background: var(--color-fill-bg-base-4);
+  box-shadow: 0 0 12px 2px rgba(80, 255, 255, 0.45), inset 0 0 22px 0 #20242A;
+  border: 2px solid #50FFFF;
+  overflow: hidden;
 }
 
-.card-item-wrap.dark {
-  opacity: 0.3;
+.warningWrapper {
+  position: absolute;
+  background: linear-gradient(180deg, #CC0066 0%, rgba(204, 0, 102, 0.2) 100%);
+  box-shadow: 0 0 12px 2px rgba(204, 0, 102, 0.4), inset 0 4px 10px 0 rgba(255, 255, 255, 0.65);
+  overflow: hidden;
 }
-
 .relation-line {
   pointer-events: none !important;
 }
@@ -69,6 +84,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 }
 
 .closeBtn:before,
@@ -155,3 +171,14 @@
 
 }
 
+.status-normal-card {
+  box-shadow: 0 0 100px rgba(80, 255, 255, 0.58);
+  border: 1px solid rgba(80, 255, 255, 0.58);
+  background:-webkit-gradient(liner,left top,left bottom, from(#002c8d),to(#00123e));
+  background: linear-gradient(to bottom,rgba(80, 255, 255, 1) 0%,rgba(80, 255, 255, 0) 100%);
+}
+.status-warning-card {
+  box-shadow: 0 0 100px #CC0066;
+  background:-webkit-gradient(liner,left top,left bottom, from(#CC0066),to(rgba(204, 0, 102, 0.2)));
+  background: linear-gradient(to bottom,#CC0066 0%,rgba(204, 0, 102, 0.2) 100%);
+}
