--- a/bricks/data-view/src/app-wall/system-card/system-card.shadow.css
+++ b/bricks/data-view/src/app-wall/system-card/system-card.shadow.css
@@ -13,61 +13,80 @@
 }
 
 .wrapper {
-   width: 260px;
-   height: 354px;
-   padding: 30px 24px 35px;
-   position: relative;
-   border-radius: var(--no-border-radius);
+  width: 260px;
+  height: 354px;
+  padding: 30px 24px 35px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  border-radius: var(--no-border-radius);
 }
+
 .infoWrapper {
-   background: var(--color-fill-bg-base-4);
-   box-shadow: 0 0 12px 2px rgba(80,255,255,0.45), inset 0 0 22px 0 #20242A;
-   border: 2px solid #50FFFF;
+  background: var(--color-fill-bg-base-4);
+  box-shadow: 0 0 12px 2px rgba(80, 255, 255, 0.45), inset 0 0 22px 0 #20242A;
+  border: 2px solid #50FFFF;
 }
+
 .warningWrapper {
-   background: linear-gradient(180deg, #CC0066 0%, rgba(204,0,102,0.2) 100%);
-   box-shadow: 0 0 12px 2px rgba(204,0,102,0.4), inset 0 4px 10px 0 rgba(255,255,255,0.65);
+  background: linear-gradient(180deg, #CC0066 0%, rgba(204, 0, 102, 0.2) 100%);
+  box-shadow: 0 0 12px 2px rgba(204, 0, 102, 0.4), inset 0 4px 10px 0 rgba(255, 255, 255, 0.65);
 }
+
 .cardName {
-   font-size: var(--title-font-size-strong);
-   line-height: 22px;
-   text-align: center;
-   font-weight: var(--font-weight-500);
-   color: var(--color-normal-text);
-   text-shadow: 0 1px 4px rgba(51,102,255,0.5);
-   margin-bottom: 35px;
+  font-size: var(--title-font-size-strong);
+  line-height: 22px;
+  text-align: center;
+  font-weight: var(--font-weight-500);
+  color: var(--color-normal-text);
+  text-shadow: 0 1px 4px rgba(51, 102, 255, 0.5);
+  margin-bottom: 35px;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
+
 .descriptions {
-    max-height: calc(100% - 70px);
-    font-size: var(--auxiliary-font-size-small);
-    overflow: auto;
-   font-weight: var(--font-weight-400);
+  flex:1;
+  margin-bottom: 20px;
+  font-size: var(--auxiliary-font-size-small);
+  overflow: auto;
+  font-weight: var(--font-weight-400);
 }
+
 .descriptionsItem .itemKey {
-   color: var(--color-secondary-text);
+  color: var(--color-secondary-text);
 }
+
 .descriptionsItem .itemValue {
-   color: var(--color-strong-text);
+  color: var(--color-strong-text);
 }
+
 .descriptionsItem {
-   display: flex;
-   gap: 10px;
-   margin-bottom: 12px;
+  display: flex;
+  gap: 10px;
+  margin-bottom: 12px;
 }
-.descriptionsItem >div {
-   flex:1;
-   text-align: left;
-   word-break: break-all;
+
+.descriptionsItem>div {
+  flex: 1;
+  text-align: left;
+  word-break: break-all;
 }
+
 .buttonContent {
-   position: absolute;
-   bottom: 16px;
-   right: 24px;
-   font-size: var(--auxiliary-font-size);
-   color: #99CCFF;
-   cursor: pointer;
-   font-weight: var(--font-weight-500);
+  position: absolute;
+  bottom: 16px;
+  right: 24px;
+  font-size: var(--auxiliary-font-size);
+  color: #99CCFF;
+  cursor: pointer;
+  font-weight: var(--font-weight-500);
 }
+
 .buttonName {
-   margin-left: 5px;
+  margin-left: 5px;
 }
