--- a/bricks/data-view/src/cabinet/cabinet-thumbnail/cabinet-thumbnail.shadow.css
+++ b/bricks/data-view/src/cabinet/cabinet-thumbnail/cabinet-thumbnail.shadow.css
@@ -3,6 +3,10 @@
 *:before {
     box-sizing: border-box;
 }
+.wrapper {
+    width: 100%;
+    height: 100%;
+}
 .wrapper,
 .thumbnailLayout {
     display: flex;
@@ -19,7 +23,7 @@
     align-items: stretch;
 }
 .clusterWrapper {
-    width: 394px;
+    width: 100%;
     height: auto;
 }
 .clusterContainer {
@@ -49,7 +53,7 @@
 .clusterContentLayout {
     display: grid;
     width: 100%;
-    grid-template-columns: repeat(4,1fr);
+    /*grid-template-columns: repeat(4,1fr);*/
 }
 .itemContent {
     width: 92px;
@@ -65,6 +69,11 @@
     font-weight: var(--font-weight-400);
     color: var(--color-normal-text);
     position: relative;
+    display: flex;
+}
+.title {
+    flex:1;
+    width: 0;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
