--- a/bricks/data-view/src/app-wall/app-wall.shadow.css
+++ b/bricks/data-view/src/app-wall/app-wall.shadow.css
@@ -171,6 +171,10 @@
 
 }
 
+.card-item-container{
+  transition: opacity 0.5s;
+}
+
 .status-normal-card {
   box-shadow: 0 0 100px rgba(80, 255, 255, 0.58);
   border: 1px solid rgba(80, 255, 255, 0.58);
