--- a/bricks/data-view/src/app-wall/app-wall.shadow.css
+++ b/bricks/data-view/src/app-wall/app-wall.shadow.css
@@ -58,7 +58,7 @@
 
 .warningWrapper {
   position: absolute;
-  background: linear-gradient(180deg, #CC0066 0%, rgba(204, 0, 102, 0.2) 100%);
+  background: linear-gradient(180deg, #CC0066 0%, rgba(204, 0, 102, 0.2) 100%),#0F1117FF;
   box-shadow: 0 0 12px 2px rgba(204, 0, 102, 0.4), inset 0 4px 10px 0 rgba(255, 255, 255, 0.65);
   overflow: hidden;
 }
