--- a/bricks/data-view/src/cabinet/cabinet-thumbnail/cabinet-thumbnail.shadow.css
+++ b/bricks/data-view/src/cabinet/cabinet-thumbnail/cabinet-thumbnail.shadow.css
@@ -13,6 +13,12 @@
     justify-content: center;
     align-items: center;
 }
+.appLayer {
+    width: 90%;
+    margin-bottom: 16px;
+    align-self: center;
+    pointer-events: none;
+}
 .thumbnailLayout {
     flex-direction: column;
 }
@@ -53,7 +59,6 @@
 .clusterContentLayout {
     display: grid;
     width: 100%;
-    /*grid-template-columns: repeat(4,1fr);*/
 }
 .itemContent {
     width: 92px;
