--- a/bricks/data-view/src/graph/text/graph-text.shadow.css
+++ b/bricks/data-view/src/graph/text/graph-text.shadow.css
@@ -1,20 +1,42 @@
 .content {
   min-width: 160px;
-  background: rgba(112, 161, 255, 0.12);
-  color: var(--color-normal-text);
-  text-shadow: 0 1px 7px #4abff7;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
   padding: 4px 0;
   width: 100%;
+  position: relative;
+  --treemap-tooltip-background: rgba(103, 149, 219, 0.12)
+    radial-gradient(
+      100% 100% ellipse at 12px 4px,
+      rgba(var(--palette-tech-blue-6-channel), 0.3),
+      rgba(var(--palette-tech-blue-6-channel), 0)
+    );
+  --treemap-backdrop-filter: blur(5px);
+}
+.content:before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  clear: both;
+  display: block;
+  z-index: -1;
+  background: var(--treemap-tooltip-background);
+  backdrop-filter: var(--treemap-backdrop-filter);
+  border-radius: 4px;
 }
 .text {
   font-size: var(--normal-font-size);
-  font-weight: var(--font-weight-400);
+  font-weight: var(--font-weight-500);
+  color: var(--color-auxiliary-text);
 }
 .value {
   font-weight: var(--font-weight-500);
   font-size: var(--normal-data-font-size-larger);
+  color: var(--color-normal-text);
+  text-shadow: var(--text-shadow);
 }
