--- a/bricks/data-view/src/graph/text/graph-text.shadow.css
+++ b/bricks/data-view/src/graph/text/graph-text.shadow.css
@@ -1,10 +1,9 @@
 .content {
-  min-width: 160px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 4px;
-  padding: 4px 0;
+  border-radius: var(--medius-border-radius);
+  padding: 4px;
   width: 100%;
   position: relative;
   --treemap-tooltip-background: rgba(103, 149, 219, 0.12)
@@ -27,7 +26,7 @@
   z-index: -1;
   background: var(--treemap-tooltip-background);
   backdrop-filter: var(--treemap-backdrop-filter);
-  border-radius: 4px;
+  border-radius: var(--medius-border-radius);
 }
 .text {
   font-size: var(--normal-font-size);
