--- a/bricks/data-view/src/complex-search/complex-search.shadow.css
+++ b/bricks/data-view/src/complex-search/complex-search.shadow.css
@@ -1,127 +1,132 @@
 .wrapper {
-    width: 100%;
-    position: relative;
+  width: 100%;
+  position: relative;
 }
 .inputWrapper {
-    width: 100%;
-    height: 32px;
-    position: relative;
+  width: 100%;
+  height: 32px;
+  position: relative;
 }
 input {
-    height: 100%;
-    line-height: 32px;
-    border: none;
-    width: 100%;
-    box-sizing: border-box;
-    padding: 0 32px;
-    background: var(--color-fill-bg-base-1);
-    border-radius: var(--medius-border-radius);
-    font-size: var(--auxiliary-font-size-small);
-    font-weight: var(--font-weight-400);
-    color: var(--color-normal-text);
+  height: 100%;
+  line-height: 32px;
+  border: none;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0 32px;
+  background: var(--color-fill-bg-base-1);
+  border-radius: var(--medius-border-radius);
+  font-size: var(--auxiliary-font-size-small);
+  font-weight: var(--font-weight-400);
+  color: var(--color-normal-text);
 }
 
 input::placeholder {
-    color: var(--color-disabled-text);
-    font-size: var(--auxiliary-font-size-small);
-    font-weight: var(--font-weight-400);
+  color: var(--color-disabled-text);
+  font-size: var(--auxiliary-font-size-small);
+  font-weight: var(--font-weight-400);
 }
 
 input:not(:disabled):focus {
-    border: none;
-    outline: 0;
+  border: none;
+  outline: 0;
 }
 .icon {
-    position: absolute;
-    color: var(--color-normal-text);
-    opacity: 0.6;
+  position: absolute;
+  color: var(--color-normal-text);
+  opacity: 0.6;
 }
 .searchIcon {
-    left: 10px;
-    top: 6px;
-    font-size: 16px;
-
+  left: 10px;
+  top: 6px;
+  font-size: 16px;
 }
 .clearIcon {
-    right: 10px;
-    top: 7px;
-    font-size: 14px;
+  right: 10px;
+  top: 7px;
+  font-size: 14px;
 }
 .dropdownWrapper {
-    width: 100%;
-    height: 336px;
-    margin: 5px 0;
-    padding: 8px 0;
-    box-sizing: border-box;
-    position: absolute;
-    z-index: 900;
-    overflow: auto;
-    background: var(--color-fill-bg-base-1);
-    border-radius: var(--medius-border-radius);
+  width: 100%;
+  height: 336px;
+  margin: 5px 0;
+  padding: 8px 0;
+  box-sizing: border-box;
+  position: absolute;
+  z-index: 900;
+  overflow: auto;
+  background: var(--color-fill-bg-base-1);
+  border-radius: var(--medius-border-radius);
 }
-.emptyData  {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: var(--color-disabled-text);
-    gap: 20px;
+.emptyData {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: var(--color-disabled-text);
+  gap: 20px;
 }
 .emptyData img {
-    width: 62px;
+  width: 62px;
 }
 .dropdownMenu {
-    overflow-y: auto;
+  overflow-y: auto;
 }
 .dropdownMenuItem {
-    padding: 6px 18px;
-    color: var(--color-normal-text);
-    font-size: var(--auxiliary-font-size-small);
-    font-weight: var(--font-weight-400);
-    display: flex;
-    align-items: center;
-    gap: 6px;
-    height: 32px;
-    line-height: 20px;
-    box-sizing: border-box;
-    cursor: pointer;
+  padding: 6px 18px;
+  color: var(--color-normal-text);
+  font-size: var(--auxiliary-font-size-small);
+  font-weight: var(--font-weight-400);
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  height: 32px;
+  line-height: 20px;
+  box-sizing: border-box;
+  cursor: pointer;
 }
 .menuTitle {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .menuIcon {
-    font-size: 20px;
+  font-size: 20px;
 }
 .dropdownMenuItem:hover {
-    border-radius: var(--no-border-radius);
-    background: var(--color-fill-bg-container-1);
+  border-radius: var(--no-border-radius);
+  background: var(--color-fill-bg-container-1);
 }
 .dropdownMenuItemTooltip {
-    position: absolute;
-    width: 324px;
-    min-height: 100px;
-    max-height: 465px;
-    overflow: auto;
-    left: -325px;
-    top: 0;
-    background: var(--color-fill-bg-base-4);
-    border-radius: var(--medius-border-radius);
+  position: absolute;
+  width: 324px;
+  left: -325px;
+  top: 0;
+  background: var(--color-fill-bg-base-4);
+  border-radius: var(--medius-border-radius);
 }
-.mask , .useBrickWrapper {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    left: 0;
+.dropdownMenuItemTooltip:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  background: #282e3a
+    linear-gradient(
+      186deg,
+      rgba(51, 102, 255, 0.3) 0%,
+      rgba(51, 102, 255, 0) 100%
+    );
+  border-radius: 4px;
+  backdrop-filter: blur(4px);
 }
 
-.mask {
-    background: #282E3A linear-gradient(186deg, rgba(51,102,255,0.3) 0%, rgba(51,102,255,0) 100%);
-    border-radius: 4px;
-    backdrop-filter: blur(4px);
-    pointer-events:none;
+.useBrickWrapper {
+  position: relative;
+  min-height: 100px;
+  max-height: 465px;
+  overflow: auto;
 }
