fix(data-view): 搜索构件、部署架构UI调整
refs DASHBOARD-378

--- a/bricks/data-view/src/complex-search/complex-search.shadow.css
+++ b/bricks/data-view/src/complex-search/complex-search.shadow.css
@@ -57,6 +57,7 @@ input:not(:disabled):focus {
   overflow: auto;
   background: var(--color-fill-bg-base-1);
   border-radius: var(--medius-border-radius);
+  backdrop-filter: blur(24px);
 }
 .emptyData {
   width: 100%;
