--- a/bricks/data-view/src/cabinet/cabinet-container/cabinet-container.shadow.css
+++ b/bricks/data-view/src/cabinet/cabinet-container/cabinet-container.shadow.css
@@ -1,155 +1,149 @@
 *,
 *:after,
 *:before {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 .wrapper {
-    width: 100%;
-    height: 100%;
-    position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 .container {
-    width: 100%;
-    height: 100%;
-    border: 3px solid;
-    backdrop-filter: blur(1px);
-    display: flex;
-    flex-direction: column;
-    cursor: pointer;
+  width: 100%;
+  height: 100%;
+  border: 3px solid;
+  backdrop-filter: blur(1px);
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
 }
 .wrapper:after,
 .wrapper:before {
-    content: "";
-    position: absolute;
-    left: 50%;
-    border: 3px solid;
-    backdrop-filter: blur(1px);
-    transform: translateX(-50%);
+  content: "";
+  position: absolute;
+  left: 50%;
+  border: 3px solid;
+  backdrop-filter: blur(1px);
+  transform: translateX(-50%);
 }
 .wrapper:before {
-    width: calc(100% - 10px);
-    height: 100%;
-    bottom: -14px;
-    z-index: -1;
-    opacity: 0.6;
-
+  width: calc(100% - 10px);
+  height: 100%;
+  bottom: -14px;
+  z-index: -1;
+  opacity: 0.6;
 }
 .wrapper:after {
-    width: calc(100% - 30px);
-    height: 100%;
-    bottom: -24px;
-    z-index: -10;
-    opacity: 0.4;
+  width: calc(100% - 30px);
+  height: 100%;
+  bottom: -24px;
+  z-index: -10;
+  opacity: 0.4;
 }
 .hostWrapper:before,
 .hostWrapper:after {
-    border-image: radial-gradient(circle,rgba(55, 229, 252, 1),#007ACA) 3 3;
+  border-image: radial-gradient(circle, rgba(55, 229, 252, 1), #007aca) 3 3;
 }
 .hostWrapper:not(:has(.item:hover)):hover:before,
-.hostWrapper.wrapper-active:before
-{
-    border-image: radial-gradient(circle, rgba(55, 229, 252, 1), #45E4FF) 3 3;
+.hostWrapper.wrapper-active:before {
+  border-image: radial-gradient(circle, rgba(55, 229, 252, 1), #45e4ff) 3 3;
 }
 
 .k8sWrapper:after,
 .k8sWrapper:before {
-    border-image: radial-gradient(circle, rgba(255, 102, 51, 1), #FF663380) 3 3;
+  border-image: radial-gradient(circle, rgba(255, 102, 51, 1), #ff663380) 3 3;
 }
 
 .hostContainer {
-    background: rgba(7,4,21,0.85);
-    backdrop-filter: blur(1px);
-    border-image: radial-gradient(circle,rgba(55, 229, 252, 1),#007ACA) 3 3;
+  background: rgba(7, 4, 21, 0.85);
+  backdrop-filter: blur(1px);
+  border-image: radial-gradient(circle, rgba(55, 229, 252, 1), #007aca) 3 3;
 }
 .hostContainer:not(:has(.item:hover)):hover,
-.hostContainer.container-active
-{
-    border-image: radial-gradient(circle, rgba(55, 229, 252, 1), #45E4FF) 3 3;
-    box-shadow: inset 0 0 30px 0 #45E4FF, inset 0 0 20px 0 #45E4FF;
+.hostContainer.container-active {
+  border-image: radial-gradient(circle, rgba(55, 229, 252, 1), #45e4ff) 3 3;
+  box-shadow: inset 0 0 30px 0 #45e4ff, inset 0 0 20px 0 #45e4ff;
 }
 .hostWrapper.wrapper-faded:after,
 .hostWrapper.wrapper-faded:before,
 .k8sWrapper.wrapper-faded:after,
-.k8sWrapper.wrapper-faded:before
-{
-    opacity: 0.1;
+.k8sWrapper.wrapper-faded:before {
+  opacity: 0.1;
 }
 
 .k8sContainer {
-    background: rgba(7,4,21,0.8);
-    border-image: radial-gradient(circle, rgba(255, 102, 51, 1), #FF663399) 3 3;
+  background: rgba(7, 4, 21, 0.8);
+  border-image: radial-gradient(circle, rgba(255, 102, 51, 1), #ff663399) 3 3;
 }
 .k8sContainer:not(:has(.item:hover)):hover,
-.k8sContainer.container-active
-{
-    box-shadow: inset 0 0 30px 0 #FF6633, inset 0 0 20px 0 #FF6633;
+.k8sContainer.container-active {
+  box-shadow: inset 0 0 30px 0 #ff6633, inset 0 0 20px 0 #ff6633;
 }
 .hostContainer.container-faded,
-.k8sContainer.container-faded
-{
-    opacity: 0.3;
+.k8sContainer.container-faded {
+  opacity: 0.3;
 }
 .content {
-    flex: 1;
-    padding: 20px 10px;
-    width: 100%;
-    box-sizing: border-box;
-    overflow-y: auto;
-    display: flex;
-    justify-content: center;
+  flex: 1;
+  padding: 20px 10px;
+  width: 100%;
+  box-sizing: border-box;
+  overflow-y: auto;
+  display: flex;
 }
 .itemContent {
-    display: inline-block;
-    vertical-align: middle;
+  display: inline-block;
+  vertical-align: middle;
 }
 .item {
-    min-width: 56px;
-    min-height: 63px;
-    max-width: 92px;
-    margin: auto;
+  min-width: 56px;
+  min-height: 63px;
+  max-width: 118px;
+  margin: auto;
 }
-
 
 .footer {
-    width: 100%;
-    height: 57px;
-    text-align: center;
-    line-height: 57px;
-    font-size: var(--auxiliary-font-size);
-    font-weight: var(--font-weight-400);
-    color: var(--color-normal-text);
-    position: relative;
-    display: flex;
+  width: 100%;
+  height: 57px;
+  text-align: center;
+  line-height: 57px;
+  font-size: var(--auxiliary-font-size);
+  font-weight: var(--font-weight-400);
+  color: var(--color-normal-text);
+  position: relative;
+  display: flex;
 }
 .footerTitle {
-    flex: 1;
-    width: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+  flex: 1;
+  width: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .footer:after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: -1;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
 }
 .hostContainer > .footer:after {
-    background: linear-gradient(180deg, rgba(26,103,157,0.2) 0%, #1B69A0 100%);
+  background: linear-gradient(180deg, rgba(26, 103, 157, 0.2) 0%, #1b69a0 100%);
 }
-
 
 .k8sContainer > .footer:after {
-    background: linear-gradient(180deg, rgba(255,102,51,0.1) 0%, rgba(255,102,51,0.55) 100%);
-
+  background: linear-gradient(
+    180deg,
+    rgba(255, 102, 51, 0.1) 0%,
+    rgba(255, 102, 51, 0.55) 100%
+  );
 }
 
-.hostContainer:not(:has(.item:hover)):hover  >.footer:after,
+.hostContainer:not(:has(.item:hover)):hover > .footer:after,
 .hostContainer.container-active > .footer:after,
-.k8sContainer:not(:has(.item:hover)):hover > .footer:after ,
-.k8sContainer.container-active >.footer:after {
-    opacity: 0.65;
+.k8sContainer:not(:has(.item:hover)):hover > .footer:after,
+.k8sContainer.container-active > .footer:after {
+  opacity: 0.65;
 }
