--- a/bricks/data-view/src/radar-chart/styles.shadow.css
+++ b/bricks/data-view/src/radar-chart/styles.shadow.css
@@ -1,7 +1,10 @@
 .radarWrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
   .canvasWrap {
+    display: block;
     width: 100%;
     height: 100%;
-    display: block;
   }
 }
