fix(data-view): treemap tooltip边界样式修改
refs DASHBOARD-376

--- a/bricks/data-view/src/modern-style-treemap/modern-style-treemap.shadow.css
+++ b/bricks/data-view/src/modern-style-treemap/modern-style-treemap.shadow.css
@@ -57,7 +57,19 @@
   --treemap-backdrop-filter: blur(5px);
   z-index: 0;
 }
-
+.bottom.tooltip,
+.bottomRight.tooltip,
+.bottomLeft.tooltip {
+  padding: 8px 8px 15px 8px;
+}
+.right.tooltip {
+  padding: 8px 15px 8px 8px;
+}
+.top.tooltip,
+.topLeft.tooltip,
+.topRight.tooltip {
+  padding: 15px 8px 8px 8px;
+}
 .tooltip::before,
 .tooltip::after {
   content: "";
