--- a/bricks/data-view/src/cabinet/cabinet-node/cabinet-node.shadow.css
+++ b/bricks/data-view/src/cabinet/cabinet-node/cabinet-node.shadow.css
@@ -39,18 +39,18 @@
 
 .type-container-group:hover .image,
 .type-container-group.status-active .image {
-  box-shadow: inset 0px 0px 16px 0px #FF9900;
-  border-color: #FF9900;
+  box-shadow: inset 0 0 16px 0 #ff9900;
+  border-color: #ff9900;
 }
 
 .type-physical-machine:hover .image,
 .type-virtual-machine:hover .image,
 .type-physical-machine.status-active .image,
 .type-virtual-machine.status-active .image {
-  box-shadow: inset 0px 0px 16px 0px #50FFFF;
-  border-color: #50FFFF;
+  box-shadow: inset 0 0 16px 0 #50ffff;
+  border-color: #50ffff;
 }
 
 .status-faded {
-  opacity: 0.3;
+  opacity: 0.4;
 }
