--- a/bricks/data-view/src/graph/layout-grid/graph-layout-grid.shadow.css
+++ b/bricks/data-view/src/graph/layout-grid/graph-layout-grid.shadow.css
@@ -13,3 +13,33 @@
   align-items: center;
   gap: 10px;
 }
+.node {
+  animation: animateNode 0.8s linear 0.4s forwards;
+  transform: translateY(30px) scale(1.1);
+}
+.text {
+  animation: animateText 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 1s forwards;
+  opacity: 0;
+}
+
+@keyframes animateNode {
+  0% {
+    transform: translateY(30px) scale(1.1);
+  }
+  50% {
+    transform: translateY(0px) scale(1.1);
+  }
+  100% {
+    transform: translateY(0px) scale(1);
+  }
+}
+@keyframes animateText {
+  0% {
+    transform: translateY(22px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
