fix(): decrease icons transfer size

--- a/bricks/icons/src/shared/DefineLinearGradient.shadow.css
+++ b/bricks/icons/src/shared/DefineLinearGradient.shadow.css
@@ -1,3 +1,9 @@
 :host([start-color][end-color]) path {
   fill: url("#linear-gradient");
 }
+
+.gradients {
+  position: absolute;
+  width: 0;
+  height: 0;
+}
