--- a/bricks/data-view/src/graph/text/graph-text.shadow.css
+++ b/bricks/data-view/src/graph/text/graph-text.shadow.css
@@ -28,10 +28,15 @@
   backdrop-filter: var(--treemap-backdrop-filter);
   border-radius: var(--medius-border-radius);
 }
-.text {
+.text,
+.symbol {
   font-size: var(--normal-font-size);
   font-weight: var(--font-weight-500);
   color: var(--color-auxiliary-text);
+}
+.text {
+  word-wrap: break-word;
+  word-break: break-all;
 }
 .value {
   font-weight: var(--font-weight-500);
