fix(data-view): cabinet某些临界值未考虑
Closes DASHBOARD-438

--- a/bricks/data-view/src/cabinet/cabinet.shadow.css
+++ b/bricks/data-view/src/cabinet/cabinet.shadow.css
@@ -39,6 +39,12 @@
   flex: 1;
   display: grid;
   grid-gap: 17px;
+  height: calc(100% - 60px);
+}
+.cluster-content {
+  display: block;
+  height: 100%;
+  overflow: hidden;
 }
 
 .close-button {
