--- a/bricks/data-view/src/cabinet/cabinet-container/cabinet-container.shadow.css
+++ b/bricks/data-view/src/cabinet/cabinet-container/cabinet-container.shadow.css
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
+  overflow: hidden;
 }
 .wrapper:after,
 .wrapper:before {
@@ -88,8 +89,12 @@
   padding: 20px 10px;
   width: 100%;
   box-sizing: border-box;
-  overflow-y: auto;
+  overflow: hidden;
   display: flex;
+}
+.contentLayout {
+  overflow: auto;
+  height: 100%;
 }
 .itemContent {
   display: inline-block;
